# iroh-usbip

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  cliff.toml  flake.nix  justfile
.github/workflows/: ci.yml
docs/: prd.md
docs/adr/: 0001-user-space-usbip-host.md  0002-connection-tickets.md  0003-single-use-capability-tickets.md  0004-raw-usbip-tunneling.md  0005-foreground-blocking-cli.md  0006-host-driver-detachment.md  0007-mockable-io-architecture.md  0008-single-crate-structure.md  0009-nix-and-native-e2e-testing.md  0010-release-automation-with-cargo-dist-and-git-cliff.md
scripts/: e2e.sh  generate_cast.py
src/: engine.rs  lib.rs  main.rs  protocol.rs  registry.rs  vhci.rs
tests/: integration_test.rs  lifecycle.rs  op_requests.rs  transfers.rs  vhci.rs
tests/common/: mod.rs
